--- a/res/themes/dark/css/_dark.pcss
+++ b/res/themes/dark/css/_dark.pcss
@@ -18,6 +18,10 @@ $separator: var(--cpd-color-gray-400);
 
 /* ******************** */
 
+:root{
+    --cpd-left-shadow: -14px 0 6px rgba(253, 239, 66, 0.6);
+}
+
 /* RoomList */
 /* ******************** */
 $roomlist-bg-color: black;
@@ -267,6 +271,7 @@ $selected-color: $room-highlight-color;
 body {
     color-scheme: dark;
     background-color: #000 !important;
+    --cpd-toggle-chatpanel-icon-bg-color: #FDEF42
 }
 
 /* Nasty hacks to apply a filter to arbitrary monochrome artwork to make it */
