--- a/res/themes/light/css/_light.pcss
+++ b/res/themes/light/css/_light.pcss
@@ -359,6 +359,7 @@ $location-live-secondary-color: var(--cpd-color-purple-600);
 
 body {
     color-scheme: light;
+    --cpd-left-shadow: none;
 }
 
 /* ******************** */
